<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_display_settings">
        <ListPreference
            app:defaultValue="default"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme_mode"
            app:title="@string/pref_title_theme_mode"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_language_settings">
        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_names"
            app:entryValues="@array/language_codes"
            app:key="language"
            app:title="@string/pref_title_change_language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>